--- a/index.html
+++ b/index.html
@@ -1,15 +1,30 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8" />
+    <title>Dicee</title>
+    <link rel="stylesheet" href="styles.css" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Indie+Flower|Lobster"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <div class="container">
+      <h1>Refresh Me</h1>
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>js practice</title>
-    <link rel="stylesheet" href="styles.css">
+      <div class="dice">
+        <p>Player 1</p>
+        <img class="img1" src="images/dice1.png" />
+      </div>
 
-</head>
-<body>
-    <script src="scrpt.js"></script>
-</body>
+      <div class="dice">
+        <p>Player 2</p>
+        <img class="img2" src="images/dice1.png" />
+      </div>
+    </div>
+
+    <footer>www 🎲 App Brewery 🎲 com</footer>
+    <script src="script.js"></script>
+  </body>
 </html>
